<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:gravity="center"
            android:orientation="vertical">


            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/profile"
                app:civ_border_width="2dp"
                android:id="@+id/person_img"
                app:civ_border_color="#FF000000"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload"
                android:textColor="#2196F3"
                android:id="@+id/uploadImage"
                android:layout_marginTop="20dp"/>

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:background="@color/black"
                android:layout_marginTop="3dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="15"
                android:layout_marginTop="20dp"
                android:id="@+id/name_edt"
                android:inputType="text"
                android:background="@drawable/edittxt_bg"
                android:hint="@string/name"
                android:gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="15"
                android:id="@+id/number_edt"
                android:inputType="number"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittxt_bg"
                android:hint="@string/number"
                android:gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="15"
                android:id="@+id/email_edt"
                android:inputType="textEmailAddress"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittxt_bg"
                android:hint="@string/email"
                android:gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="15"
                android:id="@+id/password_edt"
                android:inputType="textPassword"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittxt_bg"
                android:hint="@string/password"
                android:gravity="center"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/gradient_btnbg"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:id="@+id/singUp_btn"
                android:text="@string/signUp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp">

                <View
                    android:layout_width="70dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/orWith"/>
                <View
                    android:layout_width="70dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

               <TextView
                   android:layout_width="0dp"
                   android:layout_height="50dp"
                   android:layout_weight="1"
                   android:background="@color/fbColor"
                   android:text="@string/facebook"
                   android:textColor="@color/white"
                   android:textSize="20sp"
                   android:id="@+id/fb_txt"
                   android:gravity="center"
                   android:drawableLeft="@drawable/facebookimage"
                   android:textStyle="bold"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@color/googleColor"
                    android:text="@string/Google"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:id="@+id/google_txt"
                    android:padding="3dp"
                    android:layout_marginLeft="5dp"
                    android:drawableLeft="@drawable/googleplus"
                    android:textStyle="bold"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="80dp"
                android:textStyle="bold"
                android:id="@+id/alreadyLogin_txt"
                android:text="@string/already"/>

        </LinearLayout>

    </ScrollView>



</LinearLayout>