<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/dinner"
                android:layout_gravity="center_horizontal"
                app:tint="@color/light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logo_txt"
                android:textSize="60sp"
                android:fontFamily="cursive"
                android:textColor="@color/light"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="15"
                android:inputType="textEmailAddress"
                android:layout_marginTop="20dp"
                android:id="@+id/log_email_edt"
                android:background="@drawable/edittxt_bg"
                android:hint="@string/email"
                android:gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="15"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:id="@+id/log_pass_edt"
                android:background="@drawable/edittxt_bg"
                android:hint="@string/password"
                android:gravity="center"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/gradient_btnbg"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:id="@+id/signIn_btn"
                android:text="@string/signIn"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp">

                <View
                    android:layout_width="70dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/orWith"/>
                <View
                    android:layout_width="70dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center_vertical"
                    android:background="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@color/fbColor"
                    android:text="@string/facebook"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:id="@+id/f_txt"
                    android:drawableLeft="@drawable/facebookimage"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@color/googleColor"
                    android:text="@string/Google"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:padding="3dp"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/g_txt"
                    android:drawableLeft="@drawable/googleplus"
                    android:textStyle="bold"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="80dp"
                android:textStyle="bold"
                android:id="@+id/sendToRegister_txt"
                android:text="@string/doNot"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>