<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/restaurant_bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundopacity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:orientation="vertical">



        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/dinnerimage"
            android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logo_txt"
                android:textSize="60sp"
                android:fontFamily="cursive"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_btnbg"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:id="@+id/login_btn"
                android:text="@string/login"/>

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/gradient_btnbg"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:id="@+id/register_btn"
                android:text="@string/register"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alreadyLogin"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:id="@+id/skip_txt"
                android:layout_gravity="center_horizontal"/>


        </LinearLayout>

    </LinearLayout>



</RelativeLayout>