<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:id="@+id/detailFoodImage"
                android:src="@drawable/burgerwithchicken"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foodName"
                android:layout_marginStart="12dp"
                android:textStyle="bold"
                android:id="@+id/detailFoodName_txt"
                android:textSize="24sp"
                android:padding="5dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/minus_img"
                    android:src="@drawable/minus"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textColor="@color/black"
                    android:id="@+id/update_txt"
                    android:layout_gravity="center_vertical"
                    android:textSize="16sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/plus_img"
                    android:src="@drawable/plus"/>
            </LinearLayout>

        </LinearLayout>



    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textColor="@color/grey"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:id="@+id/detailFoodDesc_txt"
            android:textSize="16sp"
            android:layout_marginBottom="9dp"
            android:text="@string/description"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="15"
            android:inputType="text"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittxt_bg"
            android:hint="@string/name"
            android:id="@+id/detailName_edt"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="15"
            android:inputType="number"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittxt_bg"
            android:id="@+id/detailNumber_edt"
            android:hint="@string/number"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Price"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textColor="#f00"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/rupee"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="#f00"
                android:id="@+id/detailFoodPrice_txt"
                android:textSize="18sp"
                android:textStyle="bold" />



        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/gradient_btnbg"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:id="@+id/orderNow_btn"
            android:text="@string/orderNow"/>

    </LinearLayout>

</LinearLayout>